<resources>
    <string name="app_name">Mobilization`17</string>
    <string name="source">Source</string>
    <string name="swap">Swap language</string>
    <string name="target">Target</string>

    <string name="source_title">Source language</string>
    <string name="target_title">Target language</string>

    <string name="retry">Retry</string>
    <string name="offline_message">You are offline. Please Retry later</string>

    <string name="textHint">Type text for translate</string>
    <string name="error">Error! Please try again later</string>
    <string name="recognition">Voice recognition \n  Talking…</string>

    <string name="title_activity_splash">Loading...</string>

    <string name="translate">Translate</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>

    <string name="history_search">Search in history</string>
    <string name="favourite_search">Search in favourites</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="history_dialog_title">Are you sure you want to clear your history?</string>
    <string name="favourite_dialog_title">Are you sure you want to clear all favourites ?</string>
    <string name="del_history">History cleared</string>

    <string name="nothing_show">Nothing to show</string>
    <string name="translate_error">An error occurred while translating</string>
    <string name="delete">Delete</string>
</resources>
