<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/source_lang_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/swap"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/swap"
        android:ellipsize="end"
        android:gravity="end|center_vertical"
        android:lines="1"
        android:paddingRight="15dp"
        android:scrollHorizontally="true"
        android:text="@string/source"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/swap"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/swap"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_swap_lang" />

    <TextView
        android:id="@+id/target_lang_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/swap"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/swap"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:lines="1"
        android:paddingLeft="15dp"
        android:scrollHorizontally="true"
        android:text="@string/target"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

</RelativeLayout>